# agentic-forecasting

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LOCAL_INSTALL.md  Makefile  README.md  SWITCH_MODEL.md  pyproject.toml
.cursor/plans/: bootcamp_workplan_f0593b98.plan.md
.github/workflows/: code_checks.yml  publish.yml  unit_tests.yml
aieng-forecasting/: README.md  pyproject.toml
aieng-forecasting/aieng/forecasting/: __init__.py  langfuse_tracing.py  models.py
aieng-forecasting/aieng/forecasting/data/: __init__.py  cutoff.py  models.py  service.py  store.py
aieng-forecasting/aieng/forecasting/data/adapters/: __init__.py  base.py  fred.py  statcan.py
aieng-forecasting/aieng/forecasting/evaluation/: __init__.py  artifacts.py  backtest.py  eval.py  prediction.py  task.py
aieng-forecasting/aieng/forecasting/evaluation/predictors/: arima.py
aieng-forecasting/aieng/forecasting/methods/: README.md
aieng-forecasting/aieng/forecasting/methods/agentic/: __init__.py  adk_runner.py  agent_factory.py  outputs.py  predictor.py
aieng-forecasting/aieng/forecasting/methods/llm_processes/: _client.py  base.py  quantile_grid.py  sampled_trajectory.py
aieng-forecasting/tests/: __init__.py
aieng-forecasting/tests/aieng/forecasting/: test_langfuse_tracing.py
aieng-forecasting/tests/aieng/forecasting/data/: test_cutoff.py  test_data_service.py  test_fred_adapter.py  test_models.py  test_statcan_adapter.py
aieng-forecasting/tests/aieng/forecasting/evaluation/: test_artifacts.py  test_backtest.py  test_eval.py
aieng-forecasting/tests/aieng/forecasting/methods/agentic/: test_adk_runner.py  test_agent_factory.py  test_outputs.py  test_predictor.py
aieng-forecasting/tests/aieng/forecasting/methods/llm_processes/: test__client.py  test_sampled_trajectory.py
aieng-topic-impl/aieng/topic/impl/: __init__.py
docs/: adk-skills-guide.md
implementations/: README.md
implementations/boc_rate_decisions/: 01_boc_data_exploration.ipynb  02_boc_rate_direction_experiment.ipynb  03_rationale_alignment.ipynb
implementations/boc_rate_decisions/analyst_agent/: __init__.py  agent.py
implementations/boc_rate_decisions/predictors/: __init__.py  llmp_direction.py
implementations/boc_rate_decisions/starter_agent/: agent.py
implementations/boc_rate_decisions/starter_agent/skills/research-playbook/: SKILL.md
implementations/economic_forecasting/: cpi_data_exploration.ipynb
implementations/energy_oil_forecasting/: 01_wti_case_study.ipynb  02_intro_agentic_predictor.ipynb  03_one_agent_three_tasks.ipynb  04_systematic_backtest_eval.ipynb  05_adaptive_agent_training.ipynb  05_forecast_tool_demo.ipynb  06_protected_eval.ipynb  tasks.py
implementations/energy_oil_forecasting/adaptive_agent/: __init__.py  agent.py
implementations/energy_oil_forecasting/adaptive_agent/skills/fetch-yfinance/: SKILL.md
implementations/energy_oil_forecasting/adaptive_agent/skills/meta-learning/: SKILL.md
implementations/energy_oil_forecasting/adaptive_agent/skills/trend-projection/: SKILL.md
implementations/energy_oil_forecasting/adaptive_agent/skills/vol-regime/: SKILL.md
implementations/energy_oil_forecasting/adaptive_agent/skills/wti-strategy/: SKILL.md
implementations/energy_oil_forecasting/analyst_agent/: agent.py
implementations/energy_oil_forecasting/data/predictions/energy_oil_backtest/: agent_predictor_wti_analyst_news_gemini-3.1-flash-lite-preview_continuous__wti_oil_price_forecast.yaml
implementations/energy_oil_forecasting/data/predictions/energy_oil_eval_smoke/: darts_autoarima__wti_oil_price_forecast.yaml
implementations/energy_oil_forecasting/data/predictions/energy_oil_smoke/: darts_autoarima__wti_oil_price_forecast.yaml
implementations/energy_oil_forecasting/starter_agent/: agent.py
implementations/experiments/: README.md
implementations/experiments/economic_forecasting/: cpi_backtest_demo.ipynb
implementations/experiments/food_price_forecasting/: food_cpi_experiment.ipynb
implementations/experiments/getting_started/: cpi_backtest_demo.ipynb
implementations/food_price_forecasting/: 01_food_data_exploration.ipynb  02_food_cpi_experiment.ipynb  README.md  food_cpi_experiment.ipynb  plots.py  smoke_report.py
implementations/food_price_forecasting/analyst_agent/: __init__.py  agent.py
implementations/food_price_forecasting/predictors/: llmp_quantile_grid.py  llmp_sampled_trajectory.py
implementations/food_price_forecasting/starter_agent/: agent.py
implementations/getting_started/: 00_environment_check.ipynb  README.md  cpi_backtest_demo.ipynb  cpi_data_exploration.ipynb
implementations/implementation_a/: topic_a_a.ipynb  topic_a_b.ipynb
implementations/implementation_b/: topic_b_a.ipynb
implementations/sp500_forecasting/: 01_sp500_multivariate_backtest.ipynb
implementations/sp500_forecasting/predictors/: llmp_sampled_trajectory.py
implementations/sp500_forecasting/starter_agent/: agent.py
implementations/tests/energy_oil_forecasting/: test_analysis.py  test_tasks.py
implementations/tests/food_price_forecasting/: test_agent.py  test_predictors.py
implementations/tests/methods/: test_darts_regression.py
planning-docs/: backlog.md  bootcamp-project-charter.md  bootcamp-workplan.md  planning-notes.md  project-charter-final.md  technical-design.md  vector-llm-proxy.md
playground/energy_case_study/: README.md  __init__.py  config.py  data.py  experiment.py  plots.py  run_experiment.py  tune_methods.py
playground/energy_case_study/configs/: case_study.yaml
playground/energy_case_study/notebooks/: energy_oil_case_study.ipynb
playground/news_search/: pyproject.toml  run.py
playground/news_search/configs/: default.yaml
playground/news_search/news_search/: config_types.py  runner.py
playground/proxy_tests/: run_matrix.py  run_tests.py
reference_specs/: cpi_gasoline_1m.yaml  cpi_gasoline_eval_2025.yaml
reference_specs/food_cpi/: food_cpi_recent_backtest.yaml  food_cpi_single_mini_backtest.yaml
scripts/: build_e2b_template.py  fetch_cpi.py  fetch_statcan.ipynb  setup.sh
(+6 files in other folders)
