[project]
name = "aieng-template-implementation"
version = "0.1.0"
description = ""
authors = [ {name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
readme = "README.md"
repository = "https://github.com/VectorInstitute/aieng-template-implementation"
requires-python = ">=3.12"
dependencies = [
    "aieng-forecasting",
    "filelock==3.25.2",
    "jupyterlab>=4.4.8",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "pip>=25.3",
    "pygments>=2.20.0",
    "requests>=2.33.0",
    "urllib3>=2.6.0",
    "virtualenv==21.2.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "codecov>=2.1.13",
    "isort>=5.13.0",
    "mypy>=1.14.1",
    "nbqa>=1.9.1",
    "pip-audit>=2.7.3",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.2",
]

[tool.uv.workspace]
members = [
  "aieng-forecasting",
]

[tool.uv.sources]
aieng-forecasting = { workspace = true }

[tool.mypy]
ignore_missing_imports = true
install_types = true
pretty = true
namespace_packages = true
explicit_package_bases = true
non_interactive = true
warn_unused_configs = true
allow_any_generics = false
allow_subclassing_any = false
allow_untyped_calls = false
allow_untyped_defs = false
allow_incomplete_defs = false
check_untyped_defs = true
allow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
extra_checks = true

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["aieng"]
src_paths = ["aieng-forecasting"]

[tool.ruff]
include = ["*.py", "pyproject.toml", "*.ipynb"]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ICN", # flake8-import-conventions
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "W", # pycodestyle
    "N", # pep8-naming
    "ERA", # eradicate
    "PL", # pylint
]
fixable = ["A", "B", "COM", "C4", "RET", "SIM", "ICN", "Q", "RSE", "D", "E", "F", "I", "W", "N", "ERA", "PL"]
ignore = [
    "B905", # `zip()` without an explicit `strict=` parameter
    "E501", # line too long
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "PLR2004", # Replace magic number with named constant
    "PLR0913", # Too many arguments
    "COM812", # Missing trailing comma
]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
# Scripts and notebooks: sys.path hacks, lighter docstring rules, and ERA001 suppressed
# (commented-out code detection is too aggressive for exploratory/one-off code).
"scripts/**" = ["D1", "E402", "W505", "ERA001"]
"implementations/**" = ["D1", "E402", "W505", "ERA001"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.pytest.ini_options]
markers = [
    "integration_test: marks tests as integration tests",
]
