[project]
name = "aieng-forecasting"
version = "0.1.0"
description = "Agentic Forecasting — data service and evaluation harness"
authors = [{name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "fredapi>=0.5.2",
    "stats-can>=3.1.0",
    "pandas>=2.0",
    "properscoring>=0.1",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "yfinance>=1.3.0",
]

[project.optional-dependencies]
documents = [
    # Pinned: extract.py imports the internal helpers.pymupdf_rag.to_markdown to
    # stay on the deterministic (non-OCR) engine; the public API and module
    # layout shift across minor releases, so keep the range narrow.
    "pymupdf4llm>=1.27,<2",
    "pyyaml>=6.0",
]
agentic = [
    "aieng-agents[code-interpreter]>=0.3.0",
    "google-adk>=2.2.0",
    "google-cloud-storage>=2.18,<4",
    "langfuse>=4.5.1",
    "openinference-instrumentation-google-adk>=0.1.11",
    "tavily-python>=0.5",
]
llm = [
    "langfuse>=4.5.1",
    "litellm>=1.85.0",
]
numerical = [
    "darts>=0.44.1",
    "lightgbm>=4.6.0",
    "statsforecast>=2.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["aieng/"]

[tool.hatch.build.targets.wheel]
include = ["aieng/"]
